@@ -579,10 +579,8 @@ else {
                            Y, X, weights, risk, position, strata, oldid,
                            y2, x2, risk2)
     if (has.strata && found.strata) {
-        if (is.matrix(result$surv)) {
             <<newstrata-fixup>>
-        }
-    }
+    }    
 }
 @ 
 
@@ -595,15 +593,18 @@ logic.  So now pick off the bits we want.
 The names of the curves will be the rownames of the newdata arg,
 if they exist.
 <<newstrata-fixup>>=
-nr <- nrow(result$surv)  #a vector if newdata had only 1 row
+if (is.matrix(result$surv)) nr <- nrow(result$surv) 
+else nr <- length(result$surv)   # if newdata had only one row
 indx1 <- split(1:nr, rep(1:length(result$strata), result$strata))
 rows <- indx1[as.numeric(strata2)]  #the rows for each curve
 
 indx2 <- unlist(rows)  #index for time, n.risk, n.event, n.censor
 indx3 <- as.integer(strata2) #index for n and strata
 
-for(i in 2:length(rows)) rows[[i]] <- rows[[i]]+ (i-1)*nr #linear subscript
-indx4 <- unlist(rows)   #index for surv and std.err
+if (is.matrix(result$surv)) {
+    for(i in 2:length(rows)) rows[[i]] <- rows[[i]]+ (i-1)*nr #linear subscript
+    indx4 <- unlist(rows)   #index for surv and std.err
+} else indx4 <- indx2
 temp <- result$strata[indx3]
 names(temp) <- row.names(mf2)
 new <- list(n = result$n[indx3],
